--- a/MDK-ARM/up/up.build_log.htm
+++ b/MDK-ARM/up/up.build_log.htm
@@ -27,6 +27,10 @@ Project File Date:  11/22/2019
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 1 (build 61)', folder: 'D:\program\keil5_mdk\keil5_install\ARM\ARMCC\Bin'
 Build target 'up'
+compiling main.c...
+linking...
+Program Size: Code=6796 RO-data=448 RW-data=92 ZI-data=1660  
+FromELF: creating hex file...
 "up\up.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -45,7 +49,7 @@ Package Vendor: ARM
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:4.3.0
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:03
 </pre>
 </body>
 </html>
