--- a/MDK-ARM/up/up.build_log.htm
+++ b/MDK-ARM/up/up.build_log.htm
@@ -22,14 +22,21 @@ Dialog DLL:      TCM.DLL V1.14.8.0
  
 <h2>Project:</h2>
 D:\projects\keil5\up\MDK-ARM\up.uvprojx
-Project File Date:  11/22/2019
+Project File Date:  11/27/2019
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 1 (build 61)', folder: 'D:\program\keil5_mdk\keil5_install\ARM\ARMCC\Bin'
 Build target 'up'
+compiling tim.c...
+compiling stm32f4xx_hal_msp.c...
+compiling gpio.c...
+compiling pid.c...
+compiling adc.c...
+compiling dma.c...
+compiling stm32f4xx_it.c...
 compiling main.c...
 linking...
-Program Size: Code=6796 RO-data=448 RW-data=92 ZI-data=1660  
+Program Size: Code=6800 RO-data=448 RW-data=88 ZI-data=1656  
 FromELF: creating hex file...
 "up\up.axf" - 0 Error(s), 0 Warning(s).
 
@@ -49,7 +56,7 @@ Package Vendor: ARM
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:4.3.0
-Build Time Elapsed:  00:00:03
+Build Time Elapsed:  00:00:06
 </pre>
 </body>
 </html>
