--- a/MDK-ARM/up/up.build_log.htm
+++ b/MDK-ARM/up/up.build_log.htm
@@ -22,21 +22,40 @@ Dialog DLL:      TCM.DLL V1.14.8.0
  
 <h2>Project:</h2>
 D:\projects\keil5\up\MDK-ARM\up.uvprojx
-Project File Date:  11/27/2019
+Project File Date:  12/06/2019
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 1 (build 61)', folder: 'D:\program\keil5_mdk\keil5_install\ARM\ARMCC\Bin'
 Build target 'up'
-compiling tim.c...
+assembling startup_stm32f407xx.s...
+compiling adc.c...
+compiling main.c...
+compiling pid.c...
+compiling dma.c...
+compiling stm32f4xx_hal_adc.c...
+compiling stm32f4xx_hal_adc_ex.c...
 compiling stm32f4xx_hal_msp.c...
 compiling gpio.c...
-compiling pid.c...
-compiling adc.c...
-compiling dma.c...
 compiling stm32f4xx_it.c...
-compiling main.c...
+compiling tim.c...
+compiling stm32f4xx_hal_tim.c...
+compiling stm32f4xx_hal_pwr_ex.c...
+compiling stm32f4xx_hal_rcc.c...
+compiling stm32f4xx_hal_gpio.c...
+compiling stm32f4xx_hal_flash_ramfunc.c...
+compiling stm32f4xx_hal_pwr.c...
+compiling stm32f4xx_hal_rcc_ex.c...
+compiling stm32f4xx_hal_flash.c...
+compiling stm32f4xx_hal_flash_ex.c...
+compiling stm32f4xx_hal_tim_ex.c...
+compiling stm32f4xx_hal_dma.c...
+compiling stm32f4xx_hal_dma_ex.c...
+compiling stm32f4xx_hal.c...
+compiling stm32f4xx_hal_exti.c...
+compiling system_stm32f4xx.c...
+compiling stm32f4xx_hal_cortex.c...
 linking...
-Program Size: Code=6800 RO-data=448 RW-data=88 ZI-data=1656  
+Program Size: Code=6816 RO-data=448 RW-data=88 ZI-data=1656  
 FromELF: creating hex file...
 "up\up.axf" - 0 Error(s), 0 Warning(s).
 
@@ -56,7 +75,7 @@ Package Vendor: ARM
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:4.3.0
-Build Time Elapsed:  00:00:06
+Build Time Elapsed:  00:00:17
 </pre>
 </body>
 </html>
